# cs-agents-demo

./: .env.example  .gitignore  README.md  agent.py  api_client.py  api_service.py  pyproject.toml  recommender.py  requirements.txt  schema.py  settings.py  streamlit_app.py  tools.py
data/: matrix.csv  mobile.csv  scaler.pkl
vectordb/: parent_store.pkl
vectordb/ca6a9cab-d1ec-4f11-80ea-a7290ab84d9b/: index_metadata.pickle
