[project]
name = "cs-agents-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.13",
    "fastapi>=0.115.14",
    "joblib>=1.5.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "selenium>=4.34.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "selenium>=4.34.0",
]
